--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "next": "15.2.4",
+    "prismjs": "^1.30.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-simple-code-editor": "^0.14.1",
     "sharp": "^0.34.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/prismjs": "^1.26.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "tailwindcss": "^4",
